--- a/config
+++ b/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+c kill
 
 # start program launcher
-bindsym $mod+p exec --no-startup-id dmenu_recency
+bindsym $mod+p exec --no-startup-id dmenu_run
 
 # launch categorized menu
 #bindsym $mod+z exec --no-startup-id morc_menu
